# richy

./: .gitignore
src/: CMakeLists.txt  generate_version.sh  main.cpp
src/core/: CMakeLists.txt  Config.cpp  Config.h  Configuration.cpp  Configuration.h  def.h  version.h
src/net/: CMakeLists.txt  KrakenApi.cpp  KrakenApi.h
